--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -14,6 +14,8 @@ hr{
     margin: 0 20px;
 }
 .nd1{
+    width: 85%;
+    margin-left: auto;
     background-color: #efefef;
     padding: 10px;
     border-radius: 5px;
