--- a/templates/login.html
+++ b/templates/login.html
@@ -3,7 +3,7 @@
 {% block title %}Admin Dashboard{% endblock %}
 
 {% block content %}
-<div class="min-h-screen bg-gray-900 flex items-center justify-center p-5 bg-[url('https://images.unsplash.com/photo-1639762681057-408e52192e55?q=80&w=2232&auto=format&fit=crop')] bg-cover bg-center">
+<div class="min-h-screen bg-gray-900 flex items-center justify-center p-5 bg-[url('https://www.shutterstock.com/image-illustration/shades-blue-color-abstract-watercolor-600nw-2470848697.jpg')] bg-cover bg-center">
     <div class="w-full max-w-md bg-white/10 backdrop-blur-lg rounded-xl shadow-xl p-8 border border-white/10">
         <div class="text-center mb-8">
             <h1 class="text-3xl font-bold text-white mb-2">Welcome Back</h1>
