--- a/templates/incomes.html
+++ b/templates/incomes.html
@@ -1,35 +1,44 @@
 {% extends "base.html" %}
 
 {% block content %}
-<h2>Incomes</h2>
-<a href="{{ url_for('main.add_income') }}" class="btn btn-success mb-3">Add New Income</a>
+<div id="page-content-wrapper">
+    {% include 'nav.html' %}
 
-<table class="table table-striped table-hover">
-    <thead>
-        <tr>
-            <th>Invoice #</th>
-            <th>Date</th>
-            <th>Description</th>
-            <th>Amount</th>
-            <th>Category</th>
-            <th>From</th>
-            <th>To</th>
-            <th>Payment Method</th>
-        </tr>
-    </thead>
-    <tbody>
-        {% for income in incomes %}
-        <tr>
-            <td>{{ income.invoice_number }}</td>
-            <td>{{ income.date.strftime('%Y-%m-%d') }}</td>
-            <td>{{ income.description }}</td>
-            <td>${{ "%.2f"|format(income.amount) }}</td>
-            <td>{{ income.category }}</td>
-            <td>{{ income.from_person or '-' }}</td>
-            <td>{{ income.to_person or '-' }}</td>
-            <td>{{ income.payment_method }}</td>
-        </tr>
-        {% endfor %}
-    </tbody>
-</table>
+    <!-- Page content -->
+    <div class="container-fluid">
+        <div class="d-sm-flex align-items-center justify-content-between mb-4">
+            <h1 class="h3 mb-0 text-gray-800">Dashboard</h1>
+        </div>
+    <a href="{{ url_for('main.add_income') }}" class="btn btn-success mb-3">Add New Income</a>
+
+    <table class="table table-striped table-hover">
+        <thead>
+            <tr>
+                <th>Invoice #</th>
+                <th>Date</th>
+                <th>Description</th>
+                <th>Amount</th>
+                <th>Category</th>
+                <th>From</th>
+                <th>To</th>
+                <th>Payment Method</th>
+            </tr>
+        </thead>
+        <tbody>
+            {% for income in incomes %}
+            <tr>
+                <td>{{ income.invoice_number }}</td>
+                <td>{{ income.date.strftime('%Y-%m-%d') }}</td>
+                <td>{{ income.description }}</td>
+                <td>&#8377;{{ "%.2f"|format(income.amount) }}</td>
+                <td>{{ income.category }}</td>
+                <td>{{ income.from_person or '-' }}</td>
+                <td>{{ income.to_person or '-' }}</td>
+                <td>{{ income.payment_method }}</td>
+            </tr>
+            {% endfor %}
+        </tbody>
+    </table>
+</div>
+</div>
 {% endblock %}
